Changed out the spinner for a grid view. Also added images but they are currently too big.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Assigment 4</string>
+    <string name="please_select_an_image_below">Please Select an Image Below</string>
 </resources>
